--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 numpy==1.23.5
 scipy==1.9.3
-tensorflow==2.12.0
+tensorflow-cpu==2.12.0
 pywavelets==1.4.1
 opencv-python==4.8.0.74
 scikit-learn==1.2.2
